apps/shelly-gateway/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shelly-gateway
  labels:
    app: shelly-gateway
  annotations:
    prometheus.io/port: '9150'
    prometheus.io/scrape: 'true'
spec:
  ports:
    - name: http
      port: 17795
      targetPort: http
      protocol: TCP
    - name: prometheus
      port: 9150
      targetPort: prometheus
      protocol: TCP

  selector:
    app: shelly-gateway
