apps/shelly-gateway/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shelly-gateway-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
spec:
  rules:
  - host: shelly-gateway.infra.mout.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shelly-gateway
            port:
              number: 17795
  tls:
    - hosts:
      - shelly-gateway.infra.mout.ch
      secretName: shelly-gateway.infra.mout.ch-tls
